# bearvm

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.sh  benchmark_qbe.sh
rust_version/: Cargo.toml
rust_version/src/: ast.rs  ast_printer.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  qbe.rs  vm.rs
samples/: async.bear  bench.bear  bench2.bear  casts.bear  check.s  explicit.bear  hello.bear  hi.bear  hi.raku  loop.bear  loop2.bear  memory.bear  phi_fib.bear  prog.bear  ptrs.bear  read_io.bear  rec_fib.bear  simple.bear  structs.bear  sum_array.bear  write_io.bear
samples/luas/: bench2.lua  fib.lua  loop.lua  loop2.lua  sum_array.lua
src/: ast.rs  interpreter.rs  lexer.rs  parser.rs  qbe.rs
zig_rewrite/: .gitignore  ast_printer.zig  bear.zig  build.zig  io.zig  jit.zig  lexer.zig  llvm_emitter.zig  parser.zig  qbe_emitter.zig  vm.zig
zig_rewrite/ast/: ast_printer.zig  lexer.zig  parser.zig
zig_rewrite/codegen/: jit.zig  llvm_emitter.zig  qbe_emitter.zig
zig_rewrite/vm/: io.zig  vm.zig
