[package]
name = "bear"
description = "VM for QBE/SSA and interpreted modes of execution"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bear"
path = "src/main.rs"

[dependencies]
rustc-hash = "2"
itoa = "1"
smallvec = "1"
clap = { version = "4.6.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
